# ldos_manip_tracing

./: .gitignore  Makefile  README.md  requirements.txt
analysis/: analyze_cpu_usage.py  analyze_trace.py  e2e_path_analyzer.py  metrics_schema.py  plot_results.py  stats_utils.py  sweep_analysis.py  validate_weights.py
configs/: experiment_config.yaml  objectives.yaml  tracing_config.yaml
docs/: ASSUMPTIONS.md  CLOUDLAB_GUIDE.md  CPUSET_EXPERIMENT_PLAN.md  RESEARCH_ROADMAP.md  RUNBOOK.md  report_skeleton.md  report_template.tex
notebooks/: 01_data_exploration.ipynb  02_statistical_analysis.ipynb  03_path_analysis.ipynb
scripts/: analyze_traces.sh  archive_latest_experiment.sh  bootstrap_cloudlab.sh  check_cpuset_support.sh  cleanup_harness_processes.sh  collect_hardware_info.sh  cpu_load.sh  cpu_monitor.sh  cpu_profile.sh  cpuset_cleanup.sh  cpuset_launch.sh  cpuset_launch_v2.sh  cpuset_sweep.sh  deploy_to_cloudlab.sh  fetch_from_cloudlab.sh  find_breaking_point.py  msg_load.sh  parameter_sweep.sh  preflight_check.sh  profile_experiment.sh  profile_moveit.sh  run_experiment_suite.sh  run_single_trial.sh  setup_cpuset_delegation.sh  setup_workspace.sh  smoke_test.sh  start_trace.sh  stop_trace.sh  update_config.py
src/ldos_harness/: CMakeLists.txt  package.xml
src/ldos_harness/config/: kinematics.yaml  moveit.yaml  ompl_planning.yaml  panda.srdf.xacro  panda_controllers.yaml  panda_gz.urdf.xacro
src/ldos_harness/launch/: full_stack.launch.py  moveit_bringup.launch.py  ros_stack.launch.py  sim_bringup.launch.py  sim_only.launch.py
src/ldos_harness/ldos_harness/: __init__.py
src/ldos_harness/scripts/: benchmark_runner.py  msg_flood_node.py  trace_marker_node.py
tests/: run_all_tests.sh  test_analysis.sh  test_buffer_overflow.sh  test_launch_timing.sh  test_timing_accuracy.sh  test_tracing.sh
