<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ldos_harness</name>
  <version>1.0.0</version>
  <description>LDOS Tracing Harness for ROS2 Manipulation Performance Analysis</description>
  <maintainer email="aayush@example.com">Aayush Baniya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>std_srvs</depend>

  <!-- MoveIt 2 -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_msgs</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>gz_ros2_control</depend>

  <!-- Gazebo -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- Tracing -->
  <depend>tracetools</depend>

  <!-- Launch system -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Additional MoveIt components -->
  <depend>moveit_ros_planning</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
